--- a/views/css/style.css
+++ b/views/css/style.css
@@ -29,7 +29,18 @@ form {
   font-weight: 800;
 }
 
+/* added transform translateZ(0) to trigger GPU acceleration
+ http://blog.teamtreehouse.com/increase-your-sites-performance-with-hardware-accelerated-css*/
 .mover {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
   position: fixed;
   width: 256px;
   z-index: -1;
